--- a/configure-server.yml
+++ b/configure-server.yml
@@ -1,18 +1,16 @@
 ---
 - hosts: test-server
-  become: yes
+  become: true
   tasks:
   - name: install docker
-    apt: 
+    apt:
       pkg: docker.io
       state: present
-
-  - name: start docker service
+  - name: strat docker service
     service:
       name: docker
       state: started
       enabled: true
-
   - name: deploy addressbook application
-    command: docker run -itd -p 8090:8080 jayanth855/addressbook:2.0
+    command: docker run -itd -p 8090:8080 jayanth855/addressbook:3.0
 
